disable tiered compilation for more performance
by default, leiningen sets the JVM up for startup time, via tiered
compilation (see https://github.com/technomancy/leiningen/wiki/Faster).

This doesn't play so well with getting the best performance, so when
aiming for performance you need to turn off tiered compilation. Also
nearly every production jvm runs with AggressiveOpts,
UseFastAccessorMethods, and -server, so enable them too.